--- a/ejemplo_2/test_2.html
+++ b/ejemplo_2/test_2.html
@@ -12,14 +12,15 @@
 </head>
 
 <body>
-    <form method="post" action="http://localhost:8000/fotos" enctype="multipart/form-data">
+    <form method="post" action="http://localhost:8000/usuarios_p" enctype="multipart/form-data">
         <!--
         <form method="post" action="http://localhost:8000/fotos">
     -->
-        <div>Título:<input type="text" name="titulo" /></div>
-        <div>Descripción<input type="text" name="descripcion" /></div>
+        <div>Nombre:<input type="text" name="nombre" /></div>
+        <div>Dirección<input type="text" name="direccion" /></div>
         <div>Foto<input type="file" name="foto" /></div>
 
+        <div><input type="checkbox" name="usuario_vip" />usuario vip</div>
         <div><input type="submit" value="enviar" /></div>
     </form>
 </body>
